@@ -3,6 +3,10 @@ $Id$
 
 v0.83.21	10-Jun-2006
 
+	mbsetup:
+		In nodes setup added check for paths when directory sessions
+		are selected.
+
 
 v0.83.20	27-May-2006 - 10-Jun-2006
 
